Remove some text from footer of index.html

--- a/index.html
+++ b/index.html
@@ -234,5 +234,5 @@ git checkout -- deleted.file
 </div>
 <div style="color:#0000CC;width:40em;margin:1em;display:block;"><p>
 <span> &#160; &#160; </span> </p>
-<p style="font-size: 80%">Copyright &copy; 2008-2022 Borys Bradel. All rights reserved.  This site is only my possibly incorrect opinion.</p>
+<p style="font-size: 80%">Copyright &copy; 2008-2022 Borys Bradel. This site is only my possibly incorrect opinion.</p>
 </div></BODY></HTML>
